--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-midnight
+title: Welcome to Ryokenohki's homepage!
+description: I'll attempt to keep this updated with project statuses, etc.
